fix outline button on safari, mobile

--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -5,7 +5,7 @@
   cursor: pointer;
   text-decoration: none;
   line-height: 1;
-  // border: 0;
+  border: 0;
   border-radius: var(--border-radius);
   font-weight: var(--font-weight, 700);
   padding: 1.125em 2em;
@@ -28,12 +28,13 @@
   }
 
   &[data-type="outline"] {
-    --outline-size: 3px;
+    // --outline-size: 3px;
 
     background: transparent;
-    outline: var(--outline-size) solid var(--clr-neutral-50);
-    // border-radius: var(--border-radius);
-    outline-offset: calc(var(--outline-size) * -1);
+    // outline: var(--outline-size) solid var(--clr-neutral-50);
+    border: 3px solid var(--clr-neutral-50);
+    border-radius: var(--border-radius);
+    // outline-offset: calc(var(--outline-size) * -1);
     color: var(--clr-neutral-50);
     &:is(:hover, :focus) {
       background: var(--clr-neutral-50);
